name:                skiplist-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stewy33/skiplist-sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Stewart Slocum
maintainer:          slocumstewy@gmail.com
copyright:           Stewart Slocum
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       random
  default-language:    Haskell2010

executable skiplist-sandbox-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , skiplist-sandbox
  default-language:    Haskell2010

test-suite skiplist-sandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , skiplist-sandbox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stewy33/skiplist-sandbox
