name:                skiplist-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stewy33/skiplist-sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Stewart Slocum
maintainer:          slocumstewy@gmail.com
copyright:           Stewart Slocum
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5,
                       random
  default-language: Haskell2010

  other-extensions: ExistentialQuantification

  exposed-modules:
    Data.SkipList.Pure
    Data.SkipList.Internal

test-suite skiplist-sandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , skiplist-sandbox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark skiplist-sandbox-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  ghc-options:         -threaded -02 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , criterion

source-repository head
  type:     git
  location: https://github.com/stewy33/skiplist-sandbox
