name:                skiplist-sandbox
version:             0.1.0.0
synopsis:            Several implementations of a SkipList in Haskell.
description:         See synopsis.
homepage:            https://github.com/stewy33/skiplist-sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Stewart Slocum
maintainer:          slocumstewy@gmail.com
copyright:           Stewart Slocum
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
                     , random
                     , deepseq

  default-language: Haskell2010

  other-extensions: ExistentialQuantification

  exposed-modules:
    Data.SkipList.Pure
    Data.SkipList.Pure.Internal

test-suite skiplist-sandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , skiplist-sandbox
                     , tasty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark skiplist-sandbox-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , skiplist-sandbox
                     , criterion
                     , deepseq
                     , containers
                     , random
  other-modules:       BenchPure
                     , BenchMap
                     , BenchBase

source-repository head
  type:     git
  location: https://github.com/stewy33/skiplist-sandbox
